[package]
name = "image_compare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28.7"
image = "0.24.7"
pixels = "0.13.0"
clap = { version = "4.4.6", features = ["derive"] }
log = "0.4.20"
env_logger = "0.10.0"
